--- a/res/layout/page_error.xml
+++ b/res/layout/page_error.xml
@@ -12,11 +12,12 @@
         android:src="@drawable/ic_error_page" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/btn_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="加载失败,请重试"
         android:layout_marginTop="5dp"
+        android:padding="5dp"
         android:textColor="#000"
         android:background="@drawable/btn_load_error_select" />
 
